--- a/FilodendronGame/FilodendronGame/FilodendronGame.csproj
+++ b/FilodendronGame/FilodendronGame/FilodendronGame.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Filodendron.cs" />
     <Compile Include="GeneralModelManager.cs" />
+    <Compile Include="ParticleExplosion.cs" />
+    <Compile Include="ParticleSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
