--- a/SkinnedModelPipeline/SkinnedModelPipeline.csproj
+++ b/SkinnedModelPipeline/SkinnedModelPipeline.csproj
@@ -10,7 +10,8 @@
     <AssemblyName>SkinnedModelPipeline</AssemblyName>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
