--- a/FilodendronGame/FilodendronGame/FilodendronGame.csproj
+++ b/FilodendronGame/FilodendronGame/FilodendronGame.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Abilities\FilodendronRigidBody.cs" />
     <Compile Include="BasicModel.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="cButton.cs" />
     <Compile Include="Filodendron.cs" />
     <Compile Include="GeneralModelManager.cs" />
     <Compile Include="Interfaces\Animation.cs" />
