Dodana podoba grawitacji. Poprawiona klasa Filodendron

--- a/FilodendronGame/FilodendronGame/FilodendronGame.csproj
+++ b/FilodendronGame/FilodendronGame/FilodendronGame.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="cButton.cs" />
     <Compile Include="Filodendron.cs" />
+    <Compile Include="FilodendronGravity.cs" />
     <Compile Include="GeneralModelManager.cs" />
     <Compile Include="Interfaces\Animation.cs" />
     <Compile Include="Interfaces\Audio.cs" />
