--- a/FilodendronGame/FilodendronGame/FilodendronGame.csproj
+++ b/FilodendronGame/FilodendronGame/FilodendronGame.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="cButton.cs" />
     <Compile Include="CollectableItem.cs" />
+    <Compile Include="Curve3D.cs" />
     <Compile Include="Filodendron.cs" />
     <Compile Include="FilodendronGravity.cs" />
     <Compile Include="Follower.cs" />
